# django-vdservice9

./: manage.py  pyproject.toml
core/: urls.py  views.py
static/: custom.scss
static/css/: css.css  custom.css  custom.css.map
templates/: base.html  contacto.html  presupuesto.html
templates/components/: nav.html
vdservice9/: asgi.py  settings.py  urls.py  wsgi.py
