[tool.poetry]
name = "vdservice9"
version = "0.1.0"
description = ""
authors = ["jhoanesTr <jhoanes.trabajo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-compressor = "^4.0"
django-libsass = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
